<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/cardOnFile"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/title_credit_charges" />

        <item
            android:id="@+id/travelBuddy"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/title_travel_buddy" />

        <item
            android:id="@+id/travelItineraries"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/title_travel_itiniraries" />

        <item
            android:id="@+id/foreignExchange"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/title_foreign_rates" />
    </group>
</menu>